First commited as before_68019_rev1